1.4.9
- Implemented Pledge source code to handle tick events
- Replaced old Reach and Timer checks with protections from Pledge/Dusk
- Added JOML dependency for Pledge/Dusk
- Removed unnecessary PacketEvents classes
- Moved getPacketFromId method into PacketType class
- Replaced timestamps with ticks instead of milliseconds
- Moved all punishing out of Check class to PunishUtil
- Added CheckInfoData class to work with PunishUtil
- Removed all pre-existing KillAura and AimAssist classes; going to rewrite later
- Added experimental AimAssistA class that will be developed later
- Reach check can now cancel hits
- Verbose command is now per-player, default off for players, default on for console
- Improved packet counting protection
- Cleaned up PlayerData class
- Separated packet processors into new classes
- Miscellaneous code formatting changes